--- a/stories/FormControl.stories.mdx
+++ b/stories/FormControl.stories.mdx
@@ -16,9 +16,9 @@ export const Template = (args) => <Form
 
 If you would go into React Form Component source code, you would notice that
 each input component is wrapped into withFormControl HOC (Higher Order
-Component). It has two purposes. At first, it puts an input into the context of
-ancestor Form component. As second, it adds the proper surronding UI elements,
-like a label, help, prefix and suffix.
+Component). It is a key part of this library. It has two purposes. At first, it
+puts an input into the context of ancestor Form component. As second, it adds
+the proper surronding UI elements, like a label, help, prefix and suffix.
 
 ## UI Elements
 
