--- a/stories/Concept.stories.mdx
+++ b/stories/Concept.stories.mdx
@@ -17,7 +17,11 @@ export const Template = (args) =>
     />
   </Form>
 
-# Form fields
+# Contept
+
+## Form
+
+## Fields
 
 If you would go into **React Form Component** source code, you would notice that
 each input component is wrapped into **withFormControl** *HOC* (*Higher Order
@@ -28,7 +32,7 @@ it adds surronding UI elements, like a label, help, prefix and suffix.
 The combination of **Input** component wrapped into **FormControl** HOC is
 called a **Field**.
 
-## Common UI Elements provided for all fields
+### Common UI Elements provided for all fields
 
 - **Label** - title of a field, displayed before the input
 - **Input** - the input itself
@@ -52,7 +56,7 @@ Below is an example of a complete **Field** with all elements in use:
 > won't work correctly.
 
 
-## Common input props
+### Common input props
 
 Because every input provided by React Form Component is wrapped into
 withFormControl, it gains following props:
