--- a/stories/FieldLayouts.stories.mdx
+++ b/stories/FieldLayouts.stories.mdx
@@ -8,6 +8,8 @@ import Form, { Input } from '../src'
 
 # Field layouts
 
+TODO: Move this chapter to Components
+
 **React Form Component** provides some features to compose a form into various
 layouts, so you do not need to put additional styles.
 
