--- a/stories/GettingStarted.stories.mdx
+++ b/stories/GettingStarted.stories.mdx
@@ -3,6 +3,7 @@ import Form, { Input, Select, FormButton } from '../src'
 
 <Meta
   title='Introduction/Getting started'
+  parameters={{ previewTabs: { canvas: { hidden: true }}}}
 />
 
 export const Template = (args) =>
@@ -90,9 +91,11 @@ const ExampleUserForm = () =>
 export default BasicExampleForm
 ```
 
-<Canvas>
+### Result:
+
+<Canvas withSource='none'>
   <Story
-    name='Example'
+    name='Basic form example'
   >
     {Template.bind({})}
   </Story>
