--- a/stories/Overview.stories.mdx
+++ b/stories/Overview.stories.mdx
@@ -3,6 +3,7 @@ import Form, { Input, Select, FormButton } from '../src'
 
 <Meta
   title='Introduction/Overview'
+  parameters={{ previewTabs: { canvas: { hidden: true }}}}
 />
 
 # Overview
