Use hoisting in styleguide.

--- a/stories/Concept.stories.mdx
+++ b/stories/Concept.stories.mdx
@@ -3,7 +3,10 @@ import Form, { Input } from '../src'
 
 <Meta
   title='Introduction/Concept'
-  parameters={{ previewTabs: { canvas: { hidden: true }}}}
+  parameters={{
+    previewTabs: { canvas: { hidden: true }},
+    viewMode: 'docs',
+  }}
 />
 
 export const FormTemplate = (args) =>
