--- a/stories/GettingStarted.stories.mdx
+++ b/stories/GettingStarted.stories.mdx
@@ -3,7 +3,10 @@ import Form, { Input, Select, FormButton } from '../src'
 
 <Meta
   title='Introduction/Getting started'
-  parameters={{ previewTabs: { canvas: { hidden: true }}}}
+  parameters={{
+    previewTabs: { canvas: { hidden: true }},
+    viewMode: 'docs',
+  }}
 />
 
 export const Template = (args) =>
@@ -95,7 +98,7 @@ export default BasicExampleForm
 
 <Canvas withSource='none'>
   <Story
-    name='Basic form example'
+    name='Getting started'
   >
     {Template.bind({})}
   </Story>
