Prepare storybook for publishing.

--- a/stories/Concept.stories.mdx
+++ b/stories/Concept.stories.mdx
@@ -77,7 +77,7 @@ Beside these, all inputs of text type, like *Input*, *TextArea*, *Select*,
 Below is an example of a complete **Field** with all elements in use:
 
 <Canvas withSource='open'>
-  <Story name='Field example'>
+  <Story name='Field elements'>
     {FieldTemplate.bind({})}
   </Story>
 </Canvas>
