Improve overview and getting started.

--- a/stories/Overview.stories.mdx
+++ b/stories/Overview.stories.mdx
@@ -9,42 +9,43 @@ import Form, { Input, Select, FormButton } from '../src'
 # Overview
 
 **React Form Component** has been created to be a complete, independent solution
-for building forms in React in a rapid, but flexible way. Beside other form
-libraries, it ships both build in **Form State Management** system and a well
-structurized, extendable framework of compatible **Form UI Components**. This
-default framework has [configurable theme](/?path=/docs/docs-theming--page),
-which makes it flexible to match your design and functionality. So instead of a
-writing complex logic for all form interactions, and all forms one after one,
-it keeps developer focus on writing JSX code of a form, by building it from
-ready, smart components.
+for building forms in React. Beside the other form libraries, it ships both a
+ simple to learn **Form State Management** system and extendable framework of
+default **Form UI Components**. This compatible design system has
+[configurable theme](/?path=/docs/docs-theming--page), which makes it flexible
+enough to match most design and functionality scenarios. So instead of writing
+complex logic for all form interactions, it keeps developer focused on JSX code
+of a form, by building it from ready, smart components.
 
-Another usage of **React Form Component** is to be only a state management tool
-for form components of your design system, regardless it is *Material UI*,
-*Ant Design*, or any custom one. Using default components of this library is
-opional and declaring custom inputs, compatible with *Form State Management*
-is very simple - thanks to [withFormControl](/?path=/docs/docs-custom-inputs--page)
-Higher Order Component.
+Logic in **React Form Component** is so strictly separated from UI, that the
+library can act just as a dependency for form components of any design system, to
+simplify its usage. Regardless it is *Material UI*, *Ant Design*, or any other.
+Using default components is opional and declaring custom inputs, compatible with
+*Form State Management* is as simple, as wrapping into dedicated
+[withFormControl](/?path=/docs/docs-custom-inputs--page) Higher Order Component.
 
 ## What Form State Managemen does?
 
-- compose values of all fields into one object, formatted well for API calls
-- fields validation
-- handles mandatory/optional fields
-- handles success states, error state and error messages
-- provides various methods on handling submit action
-- allows to set initial form state
+- submits values from all fields as one object, well formatted for API calls,
+- fields validation,
+- allows to set initial field values,
+- handles mandatory fields,
+- handles success states, error state and error messages,
+- provides various ways for triggering submit action.
 
 ## Advantages of built-in Form UI Components
 
-- flexible theme
-- miminalistic DOM
-- cross browser tested
-- covers most common cases
-- behavior custimizable by various props
-- field groups
+- flexible theme,
+- miminalistic DOM,
+- cross-browser tested,
+- covers all most common design scenarios,
+- inputs behavior is custimizable by various props,
+- allows to build nested structure of a form.
 
 ## Manifest
 
 Learning curve of building forms in React should be lowered.
 The code of react forms is too repetitive.
 There shouldn't be a form impossible to creatie with **React Form Component**.
+
+Enough of words. [Let's see some code](?path=/docs/introduction-getting-started--getting-started).
