--- a/stories/GettingStarted.stories.mdx
+++ b/stories/GettingStarted.stories.mdx
@@ -32,6 +32,8 @@ export const Template = (args) =>
 
 # Getting started
 
+This is a tutorial how to build a very first form with **React Form Component**.
+
 ## Installation
 
 ```
@@ -39,9 +41,9 @@ yarn add react-form-component
 ```
 
 
-## Building first form
+## Code steps
 
-1. Wrap entitre app into `<FormThemeProvider>`. **Optionally add theme** prop to [define a custom theme](http://localhost:6006/?path=/docs/docs-theming--page).
+1. Wrap entitre app into `<FormThemeProvider>`. **Optionally add a theme** prop to define a [custom theme](http://localhost:6006/?path=/docs/docs-theming--page).
 
 ```jsx
 // App.js
@@ -57,9 +59,9 @@ const App = () =>
 ReactDOM.render(<App />, document.querySelector('#app'))
 ```
 
-2. Use `<Form>` component anywhere in the app, declare all field names in a fields prop.
-3. Use any from built-in input widgets or build custom inputs to compose a form. Give each input a name prop that corresponds with one defined in a fields prop of the ancestor `<Form>` component.
-4. Use `<FormButton>` to trigger a submit function that returns all values formatted in a form of a simple javascript object.
+2. Put `Form` component anywhere in the app, declare field names in a `fields` prop - each unique for a form.
+3. Use any input from the collection of default _Form UI Components_. Give each field a name prop, that corresponds with the one defined in `fields` prop of the ancestor `Form` component.
+4. Use `FormButton` to trigger a submit function that returns all values formatted in a form of an object, that consists of keys declared as field names.
 
 ```jsx
 // ExampleUserForm.js
