Fix removing of fielgroup rows after resigning from internalValue state.

--- a/stories/Theming.stories.mdx
+++ b/stories/Theming.stories.mdx
@@ -79,6 +79,7 @@ The default theme object has following structure and values:
     urlInvalid: 'This is not a valid URL.',
     phoneInvalid: 'This is not a valid phone number.',
     postCodeInvalid: 'This is not a valid postal code.',
+    fieldgroupInvalid: 'Some rows are not filled correctly.',
     addMore: 'Add more',
   },
 
