--- a/stories/Overview.stories.mdx
+++ b/stories/Overview.stories.mdx
@@ -1,5 +1,5 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs'
-import Form, { Input, Select, FormButton } from '../src'
+import Form, { Input, Select, SubmitButton } from '../src'
 
 <Meta
   title='Introduction/Overview'
