--- a/stories/FieldLayouts.stories.mdx
+++ b/stories/FieldLayouts.stories.mdx
@@ -15,13 +15,13 @@ layouts, so you do not need to put additional styles.
 By default, field label is displayed above the field. You can move it to left by
 adding the `inlineLabel` prop to a particular field. Inline label will always
 have the same width, which is configurable in
-[theme](/?path=/docs/docs-form-layouts--page#default-theme).
+[theme](?path=/docs/docs-form-layouts--page#default-theme).
 
 ## Layout components
 
 In the *Components/Various* chapter there are some components, that are wrappers
 for fields, that puts them into various layouts:
 
-- [**Row**](?path=/docs/components-layouts-row--example)
-- [**Compound**](?path=/docs/components-layouts-compound--example)
-- [**FormActions**](?path=/docs/components-layouts-formactions--example)
+- [**Row**](?path=/docs/components-various-row--row)
+- [**Compound**](?path=/docs/components-various-compound--compound)
+- [**FormActions**](?path=/docs/components-various-form-actions--form-actions)
