--- a/stories/GettingStarted.stories.mdx
+++ b/stories/GettingStarted.stories.mdx
@@ -56,7 +56,7 @@ yarn add react-form-component
 
 ## Code steps
 
-1. Wrap entitre app into `<FormThemeProvider>`. **Optionally add a theme** prop to [customize a theme](http://localhost:6006/?path=/docs/docs-theming--page).
+1. Wrap entitre app into `<FormThemeProvider>`. **Optionally add a theme** prop to [customize a theme](?path=/docs/docs-theming--page).
 
 ```jsx
 // App.js
