--- a/stories/Overview.stories.mdx
+++ b/stories/Overview.stories.mdx
@@ -12,7 +12,7 @@ import Form, { Input, Select, SubmitButton } from '../src'
 for building forms in React. Beside the other form libraries, it ships both a
  simple to learn **Form State Management** system and extendable framework of
 default **Form UI Components**. This compatible design system has
-[configurable theme](/?path=/docs/docs-theming--page), which makes it flexible
+[configurable theme](?path=/docs/docs-theming--page), which makes it flexible
 enough to match most design and functionality scenarios. So instead of writing
 complex logic for all form interactions, it keeps developer focused on JSX code
 of a form, by building it from ready, smart components.
@@ -22,7 +22,7 @@ library can act just as a dependency for form components of any design system, t
 simplify its usage. Regardless it is *Material UI*, *Ant Design*, or any other.
 Using default components is opional and declaring custom inputs, compatible with
 *Form State Management* is as simple, as wrapping into dedicated
-[withFormControl](/?path=/docs/docs-custom-inputs--page) Higher Order Component.
+[withFormControl](?path=/docs/docs-custom-inputs--page) Higher Order Component.
 
 ## What Form State Managemen does?
 
