Add rtl support.

--- a/stories/Overview.stories.mdx
+++ b/stories/Overview.stories.mdx
@@ -41,6 +41,7 @@ Using default components is opional and declaring custom inputs, compatible with
 - covers all most common design scenarios,
 - inputs behavior is custimizable by various props,
 - allows to build nested structure of a form.
+- rtl support
 
 ## Manifest
 
