--- a/stories/Theming.stories.mdx
+++ b/stories/Theming.stories.mdx
@@ -61,6 +61,7 @@ The default theme object has following structure and values:
     labelFontSize: 14,
     labelFontWeight: 'normal',
     helpFontSize: 12,
+    direction: 'ltr',
   },
 
   breakpoints: {
